--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -21,6 +21,8 @@
   "name": "الإسم",
   "Registertitle": "حساب جديد",
   "Registername": "التسجيل",
+  "logout":" تسجيل الخروج",
+  "welcome": "مرحباً",
   "send": "إرسال",
   "objectives": "الأهداف",
   "Supporters": "الرعاة والشركاء",
@@ -96,6 +98,11 @@
   "ActivitiesText9": "إطلاق المبادرات ",
   "ActivitiesText10": "إطلاق مشروعات ومبادرات استثمارية جديدة تهدف لدعم النمو الاقتصادي.",
   "ActivitiesText11": "اجتماعات ثنائية B2B",
+  "ActivitiesTexts1": "تدشين مشاريع بوابة المدينة(بمقر المشروع)",
+  "ActivitiesTexts2": "ورشة عمل: دور السياسات والتشريعات الاستثمارية في تمكين استثمارات القطاع الخاص",
+  "ActivitiesTexts3": "المعرض المصاحب واجتماعات ثنائية B2B",
+  "ActivitiesTexts4": "لـــقـــاء مبادرة منافع",
+
   "ActivitiesText12": "فرص للاجتماع المباشر بين المستثمرين وأصحاب المشاريع لتبادل الفرص.",
   "ActivitiesText13": "توقيع عقود واتفاقيات",
   "ActivitiesText14": "توقيع شراكات استراتيجية وعقود استثمارية تدعم النمو المستدام.",
@@ -105,7 +112,7 @@
   "ActivitiesText18": "فعاليات المنتدى تتيح فرصًا مميزة للتواصل، التعلم، وبناء الشراكات الناجحة",
   "ActivitiesText19": "يقدم منتدى المدينة للاستثمار مجموعة من الفعاليات المتنوعة التي تهدف إلى تعزيز التواصل بين رجال الأعمال والمستثمرين، مع فتح آفاق جديدة للتعاون وتبادل المعرفة. تشمل الفعاليات الرئيسية جلسات حوارية، ورش عمل، ومعرضًا مصاحبًا. كما تشمل الفعاليات المصاحبة مبادرات جديدة، اجتماعات ثنائية، وتوقيع اتفاقيات تسهم في دفع عجلة النمو والاستثمار في المنطقة.",
   "ActivitiesText20": "الفعاليات الرئيسية",
-  "FooterText1": "ينطلق منتدى المدينة للاستثمار هو تجمع رائد يهدف إلى تعزيز وتوسيع الفرص الاستثمارية في مختلف القطاعات الاقتصادية بالمنطقة. يجمع المنتدى نخبة من المستثمرين، رجال الأعمال، والخبراء الماليين وصناع القرار، لتبادل المعرفة والخبرات، واستكشاف المشاريع الجديدة، وبحث الاتجاهات المستقبلية التي ستساهم في إحداث تغييرات إيجابية في الاقتصاد المحلي، تحت رعاية أمير منطقة المدينة المنورة.",
+  "FooterText1": "منتدى المدينة للاستثمار هو تجمع رائد يهدف إلى تعزيز وتوسيع الفرص الاستثمارية في مختلف القطاعات الاقتصادية بالمنطقة. يجمع المنتدى نخبة من المستثمرين، رجال الأعمال، والخبراء الماليين وصناع القرار، لتبادل المعرفة والخبرات، واستكشاف المشاريع الجديدة، وبحث الاتجاهات المستقبلية التي ستساهم في إحداث تغييرات إيجابية في الاقتصاد المحلي، تحت رعاية أمير منطقة المدينة المنورة.",
   "FooterText2": "البريد الإلكترونى :",
   "FooterText3": "رقم الجوال :",
   "FooterText4": "920028910",
@@ -142,6 +149,15 @@
   "ml3": "تسجيل الدخول إلى منتدى المدينة للاستثمار يمنحك فرصة التواصل مع أبرز المستثمرين والخبراء في المنطقة. انضم الآن للاستفادة من فرص الشراكة الاستثمارية، الجلسات الحوارية، وبرامج التمويل المتاحة.",
   "date1": "10:00 صباحا-  4:00 مساء",
   "loginsession": "شارك بالجلسة",
-  
-  "Done": "حسنا"
+
+  "Done": "حسنا",
+  "CardText1": "الفرص المطروحة",
+  "CardText2": "فرصة",
+  "CardText3": "قيمة الاستثمار",
+  "CardText4": "مليار ريال سعودي",
+  "CardText5": "الجهات المشاركة",
+  "CardText6": "جهة",
+  "CardText7": "عدد المتحدثين",
+  "CardText8": "متحدث",
+  "speackers": "المتحدثون"
 }
