--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -6,7 +6,7 @@
   "language": "lang",
   "Eng": "English",
   "Ar": "Arabic",
-  "DiscussionSessions":"Sessions",
+  "DiscussionSessions": "Sessions",
   "Auctions": "Auctions",
   "Discussion_sessions": "Discussion sessions",
   "Workshops_meetings": "Workshops and meetings",
@@ -113,6 +113,7 @@
   "Login": "Login",
   "rememberMe": "remember me",
   "singUp": "Sing Up",
+  "welcome": "welcome",
   "doSignUp": "Create New Account",
   "Nothaveaccount": "Not Have Account",
   "gender": "Gender",
@@ -135,6 +136,21 @@
   "ml2": "Register in the City Investment Forum and start your investment journey",
   "ml3": "Logging in to the City Investment Forum gives you the opportunity to connect with the most prominent investors and experts in the region. Join now to benefit from investment partnership opportunities, dialogue sessions, and available financing programs.",
   "date1": "10:00 Am -  4:00 pm",
-  "loginsession":"subscribe",
-  "Done":"Done"
+  "loginsession": "subscribe",
+  "Done": "Done",
+  "CardText1": "Available Opportunities",
+  "CardText2": "Opportunity",
+  "CardText3": "Investment Value",
+  "CardText4": "Billion SAR",
+  "CardText5": "Participating Entities",
+  "CardText6": "Entity",
+  "CardText7": "Number of Speakers",
+  "CardText8": "Speaker",
+  "Pm": "Pm",
+  "logout": "log out",
+"ForumPartners":"Forum Partners",
+  "ActivitiesTexts1": "Inauguration of Madinah Gateway Projects (at the project site)",
+  "ActivitiesTexts2": "Workshop: The Role of Investment Policies and Legislation in Empowering Private Sector Investments",
+  "ActivitiesTexts3": "Accompanying Exhibition and B2B Meetings",
+  "ActivitiesTexts4": "Manaf Initiative Meeting"
 }
